<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="@dimen/small_padding"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/difficulty_label"
        android:textSize="@dimen/label_size" />
    <RadioGroup
        android:layout_width="match_parent"
        android:id="@+id/difficulty"
        android:checkedButton="@id/normal_difficulty"
        android:layout_height="wrap_content">
        <RadioButton android:id="@+id/normal_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_label" />
        <RadioButton android:id="@+id/hard_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_label" />
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/difficulty_label"
        android:textSize="@dimen/label_size" />
    <RadioGroup
        android:layout_width="match_parent"
        android:checkedButton="@id/joystick"
        android:id="@+id/controller"
        android:layout_height="wrap_content">
        <RadioButton android:id="@+id/joystick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joystick_label" />
        <RadioButton android:id="@+id/sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor_label" />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_label"
        android:id="@+id/play_button" />
</LinearLayout>